# game

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: data.rs  database.rs  lib.rs  main.rs  profile.rs
static/: dark.css  gay.css  gridly.min.css  styles.css
templates/: base.html.tera  dark_min.html  game.html.tera  leaderboard.html  leaderboard.html.tera  login.html  login.html.tera  min.html.tera  shop.html  shop.html.tera
