[package]
name = "game"
version = "0.1.0"
authors = ["132ikl <132@ikl.sh>"]
edition = "2018"

[dependencies]
bcrypt = "^0.8.2"
bincode = "^1.1.4"
chrono = "^0.4.19"
json = "^0.12.4"
rocket = "^0.4.6"
serde_repr = "^0.1.6"
sled = "^0.34"

[dependencies.serde]
version = "^1.0.117"
features = ["derive"]

[dependencies.rocket_contrib]
version = "^0.4.6"
default-features = false
features = ["serve", "tera_templates"]
