[package]
name = "button-game"
version = "1.0.4"
authors = ["132ikl <132@ikl.sh>"]
description = "eccentric skinner box point-collecting game"
license = "AGPL-3.0"
repository = "https://github.com/132ikl/game"
edition = "2018"

[dependencies]
bcrypt = "0.9.0"
bincode = "1.3.1"
csv = "1.1.4"
json = "0.12.4"
rocket = "0.4.6"
serde_repr = "0.1.6"
sled = "0.34.6"
tempfile = "3.1.0"
serde_json = "1.0.59"
rand = "0.7.3"

[dependencies.rust-embed]
version = "5.6.0"
features = ["debug-embed"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve", "tera_templates"]
